--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,9 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
+  min-inline-size: 375px;
+  max-inline-size: 700px;
 }
 
 h1,
@@ -21,7 +23,11 @@ h6,
 p,
 ul,
 ol,
-li {
+li,
+div,
+img,
+fieldset,
+button {
   margin: 0;
   padding: 0;
 }
