--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,35 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --main-font-weight: 465;
+  --headings-font-weight: 785;
+  --bg-color: #000;
+  --text-color: #00CC14;
+  --gradient-strip-color: var(--bg-color);
+  --gradient-start: #007f0c;
+  --gradient-end: #004306;
+}
+
+:root.theme-light {
+  --main-font-weight: 400;
+  --headings-font-weight: 700;
+  --bg-color: #fff;
+  --text-color: #000;
+  --gradient-strip-color: #d3d3d3;
+  --gradient-start: #e7e7e7;
+  --gradient-end: #1a1a1a;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --main-font-weight: 465;
+    --headings-font-weight: 785;
+    --bg-color: #000;
+    --text-color: #00CC14;
+    --gradient-strip-color: var(--bg-color);
+    --gradient-start: #007f0c;
+    --gradient-end: #004306;
+  }
+}
