--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+
+:root {
+  --main-font: 'Inter-Variable';
+  --accent-font: 'PressStart2P-Regular';
+  --main-font-weight: 400;
+  --headings-font-weight: 700;
+  --bg-color: #fff;
+  --text-color: #000;
+  --gradient-strip-color: #d3d3d3;
+  --gradient-start: #e7e7e7;
+  --gradient-end: #1a1a1a;
+  --bg-image: repeating-linear-gradient(to right, var(--gradient-strip-color) 0 2px, transparent 2px 4px), 
+      repeating-linear-gradient(to bottom, var(--gradient-strip-color) 0 2px, transparent 2px 4px),
+      linear-gradient(to bottom, var(--gradient-start) 0.01%, var(--gradient-end));
+}
