--- a/styles/style.css
+++ b/styles/style.css
@@ -195,10 +195,26 @@
 }
 
 .card__icon-button {
-  border: 0;
+  border: 2px solid transparent;
   background-color: transparent;
   cursor: pointer;
   inline-size: 39px;
+  transition: border 0.3s ease;
+  block-size: 37px;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--text-color);
+}
+
+.like-icon {
+  inline-size: 100%;
+  object-fit: contain;
+  object-position: center;
 }
 
 .card__like-button {
