--- a/styles/themes.css
+++ b/styles/themes.css
@@ -13,6 +13,8 @@
   --gradient-strip-color: var(--bg-color);
   --gradient-start: #007f0c;
   --gradient-end: #004306;
+  --reversed-text: var(--text-color);
+  --heart: #ff0000;
 }
 
 :root.theme-light {
@@ -23,6 +25,8 @@
   --gradient-strip-color: #d3d3d3;
   --gradient-start: #e7e7e7;
   --gradient-end: #1a1a1a;
+  --reversed-text: var(--bg-color);
+  --heart: #ff0000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -34,5 +38,7 @@
     --gradient-strip-color: var(--bg-color);
     --gradient-start: #007f0c;
     --gradient-end: #004306;
+    --reversed-text: var(--bg-color);
+    --heart: #ff0000;
   }
 }
