--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,6 +10,7 @@
   --gradient-strip-color: #d3d3d3;
   --gradient-start: #e7e7e7;
   --gradient-end: #1a1a1a;
+  --reversed-text: var(--bg-color);
   --heart: #ff0000;
   --bg-image: repeating-linear-gradient(to right, var(--gradient-strip-color) 0 2px, transparent 2px 4px), 
       repeating-linear-gradient(to bottom, var(--gradient-strip-color) 0 2px, transparent 2px 4px),
