--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,6 +12,8 @@
   --gradient-end: #1a1a1a;
   --reversed-text: var(--bg-color);
   --heart: #ff0000;
+  --contour-color: var(--text-color);
+  --main-body-color: var(--heart);
   --bg-image: repeating-linear-gradient(to right, var(--gradient-strip-color) 0 2px, transparent 2px 4px), 
       repeating-linear-gradient(to bottom, var(--gradient-strip-color) 0 2px, transparent 2px 4px),
       linear-gradient(to bottom, var(--gradient-start) 0.01%, var(--gradient-end));
