--- a/styles/variables.css
+++ b/styles/variables.css
@@ -14,6 +14,7 @@
   --heart: #ff0000;
   --contour-color: var(--text-color);
   --main-body-color: var(--heart);
+  --backdrop-color: #000;
   --bg-image: repeating-linear-gradient(to right, var(--gradient-strip-color) 0 2px, transparent 2px 4px), 
       repeating-linear-gradient(to bottom, var(--gradient-strip-color) 0 2px, transparent 2px 4px),
       linear-gradient(to bottom, var(--gradient-start) 0.01%, var(--gradient-end));
