--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
   background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-variation-settings: 'wght' var(--main-font-weight);
+  font-variation-settings: "wght" var(--main-font-weight);
 }
 
 .header {
@@ -72,17 +72,17 @@
 }
 
 .theme-menu__button::after {
-  content: '';
+  content: "";
   position: absolute;
+  opacity: 0.6;
+  background-color: var(--text-color);
+  transition: transform 0.3s ease;
+  transform: scaleX(0);
+  transform-origin: left;
   inline-size: 100%;
   block-size: 2px;
-  background-color: var(--text-color);
-  opacity: 0.6;
   inset-inline-start: 0;
   inset-block-end: -1px;
-  transform: scaleX(0); 
-  transform-origin: left;
-  transition: transform 0.3s ease;
 }
 
 .theme-menu__button:focus-visible {
@@ -105,15 +105,15 @@
 }
 
 .theme-menu__button:disabled::before {
-  content: '▶';
+  content: "▶";
   position: absolute;
   opacity: 0.6;
   line-height: 100%;
+  animation: pointer ease-in-out infinite 0.5s alternate;
   inset-inline-start: -21px;
   inset-block-start: 1px;
   inline-size: 14px;
   block-size: 14px;
-  animation: pointer ease-in-out infinite 0.5s alternate;
 }
 
 .content {
@@ -137,7 +137,7 @@
   border-block-end: 2px solid var(--text-color);
   padding: 5px 10px;
   font-size: 18px;
-  font-variation-settings: 'wght' var(--headings-font-weight);
+  font-variation-settings: "wght" var(--headings-font-weight);
 }
 
 .card__image {
@@ -185,21 +185,21 @@
 .card__image-label {
   position: absolute;
   opacity: 0.5;
-  font-family:var(--accent-font);
+  font-family: var(--accent-font);
   font-size: 14px;
   text-transform: uppercase;
   text-shadow: 0 0 5px var(--bg-color);
   inset-inline-end: 25px;
   inset-block-start: 25px;
   mix-blend-mode: hard-light;
-  }
+}
 
-@supports(-webkit-text-stroke: 1px #fff) {
+@supports (-webkit-text-stroke: 1px #fff) {
   .card__image-label {
-      text-shadow: none;
-      -webkit-text-stroke: 1px var(--bg-color);
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--bg-color);
   }
-} 
+}
 
 .card__description {
   display: flex;
@@ -230,17 +230,16 @@
   align-items: center;
   border: 2px solid transparent;
   background-color: transparent;
+  transition: border 0.3s ease;
   cursor: pointer;
   inline-size: 43px;
   block-size: 38px;
-  transition: border 0.3s ease;
-
 }
 
 .like-icon {
-  inline-size: 100%;
   object-fit: contain;
   object-position: center;
+  inline-size: 100%;
 }
 
 .contour {
@@ -259,8 +258,8 @@
 }
 
 .sparks {
-  fill: var(--heart);
   opacity: 0;
+  fill: var(--heart);
 }
 
 .card__icon-button:hover .main-body {
@@ -271,7 +270,7 @@
 .card__icon-button:hover .core {
   fill: var(--contour-color);
   transition: fill 0.3s linear;
-} 
+}
 
 .card__icon-button:active .main-body {
   fill: var(--heart);
@@ -281,7 +280,7 @@
 .card__icon-button:active .core {
   fill: var(--heart);
   transition: fill 0.3s linear;
-} 
+}
 
 .card__icon-button:focus {
   outline: none;
@@ -316,41 +315,41 @@
 }
 
 .card__like-button {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
   gap: 8px;
   align-self: flex-end;
   border: 2px solid var(--text-color);
+  background-color: transparent;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
   block-size: 38px;
   inline-size: 130px;
-  background-color: transparent;
-  cursor: pointer;
-  transition: box-shadow 0.3s ease;
 }
 
 .floppy {
-  fill: var(--reversed-text);
-  stroke: var(--reversed-text);
   position: relative;
   z-index: 1;
-  mix-blend-mode: difference; 
+  fill: var(--reversed-text);
+  stroke: var(--reversed-text);
+  mix-blend-mode: difference;
 }
 
 .button__text {
   position: relative;
   z-index: 1;
+  color: var(--reversed-text);
   font-family: var(--accent-font);
   font-size: 14px;
   line-height: 90%;
   mix-blend-mode: difference;
-  color: var(--reversed-text);
 }
 
 .save-button {
-  display: flex;
   position: relative;
+  display: flex;
   align-items: center;
   gap: 8px;
   align-self: flex-end;
@@ -358,30 +357,30 @@
   border: 2px solid var(--text-color);
   padding: 15px 21px 15px 19px;
   background-color: var(--bg-color);
-  cursor: pointer;
   transition: box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 .card__like-button:focus-visible,
 .save-button:focus-visible,
 .save-dialog__button:focus-visible {
-  outline:none;
   box-shadow: 2px 2px 0 var(--text-color);
+  outline: none;
 }
 
 .card__like-button:after,
 .save-button:after,
 .save-dialog__button:after {
-  content: '';
+  content: "";
   position: absolute;
+  background-color: var(--text-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
   inline-size: 100%;
   block-size: 100%;
-  background-color: var(--text-color);
   inset-inline-start: 0;
   inset-block-start: 0;
-  transform: scaleX(0);
-  transition: transform 0.5s ease-in-out;
-  transform-origin: left;
 }
 
 .card__like-button:hover:after,
@@ -393,15 +392,15 @@
 .save-dialog {
   display: flex;
   flex-direction: column;
-  font-family: var(--accent-font);
-  font-size: 14px;
-  text-transform: uppercase;
-  line-height: 150%;
   gap: 30px;
   border: 2px solid var(--text-color);
   padding: 30px;
-  background-color: var(--bg-color);
   color: var(--text-color);
+  font-family: var(--accent-font);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+  background-color: var(--bg-color);
 }
 
 .save-dialog:not([open]) {
@@ -409,14 +408,14 @@
 }
 
 .save-dialog::backdrop {
-  background-color: var(--backdrop-color);
   opacity: 0.75;
+  background-color: var(--backdrop-color);
 }
 
 .save-dialog__description {
   display: flex;
   align-items: center;
-  gap: 20px
+  gap: 20px;
 }
 
 .save-dialog__text {
@@ -425,17 +424,17 @@
 }
 
 .save-dialog__button {
-  display: flex;
   position: relative;
-  align-items: center;
+  display: flex;
   justify-content: center;
+  align-items: center;
   gap: 8px;
   border: 2px solid var(--text-color);
   padding: 10px 0;
-  background-color: var(--bg-color);
-  cursor: pointer;
-  transition: box-shadow 0.3s ease;
   text-transform: uppercase;
+  background-color: var(--bg-color);
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
 }
 
 @keyframes pointer {
