--- a/styles/style.css
+++ b/styles/style.css
@@ -37,12 +37,14 @@
   inline-size: 100%;
 }
 
-.header__title {
+.header__logo {
+  display: block;
+  text-decoration: none;
   margin-block-start: clamp(7.438rem, 2.985vw + 6.757rem, 8.063rem);
   font-size: clamp(3.0625rem, 1.8943rem + 4.9844vw, 4.0625rem);
 }
 
-.header__subtitle {
+.header__title {
   margin-block-start: 12px;
   font-size: clamp(0.875rem, 0.2179rem + 2.8037vw, 1.4375rem);
 }
@@ -121,10 +123,8 @@
   inline-size: 100%;
 }
 
-.card-list {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+.card:not(:first-of-type) {
+  margin-block-start: 50px;
 }
 
 .card {
@@ -372,6 +372,7 @@
 
 .save-dialog__button {
   position: relative;
+  inline-size: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
